--- a/ElasticsearchHelperTool/ElasticsearchHelperTool.csproj
+++ b/ElasticsearchHelperTool/ElasticsearchHelperTool.csproj
@@ -35,6 +35,9 @@
       <None Update="Properties\launchSettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="appsettings.Production.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
